--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,11 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on: 
+  workflow_dispatch:
+  push:
+  schedule:
+    - cron: "20 10 * * *"
+    - cron: "20 4 * * *"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
