--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m venv ./.venv
-          . ./.venv/bin/activate
+      # - name: Install dependencies
+      #   run: |
+      #     python -m venv ./.venv
+      #     . ./.venv/bin/activate
       - name: runPython
         run: |
-        . ./.venv/bin/activate
+        # . ./.venv/bin/activate
         python ./a.py
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
