--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,8 +36,8 @@ jobs:
           subject: Github Actions job result
           to: 2506370693@qq.com
           from: chuangtiso@outlook.com
-          body: ${{github.repository}}
-          push log : ${{steps.git_log.outputs.log}}
+          body: ${{steps.git_log.outputs.log}}
+          # push log : ${{steps.git_log.outputs.log}}
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
