--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m venv ./.venv
-          . ./.venv/bin/activate
+      # - name: Install dependencies
+      #   run: |
+      #     python -m venv ./.venv
+      #     . ./.venv/bin/activate
       - name: runPython
         run: |
-          . ./.venv/bin/activate
+          # . ./.venv/bin/activate
           python ./a.py
       # - name: Send email
       #   uses: dawidd6/action-send-mail@v3
