--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   workflow_dispatch:
-  push:
+  # push:
   # schedule:
   #   - cron: "20 10 * * *"
   #   - cron: "20 4 * * *"
@@ -14,7 +14,7 @@ jobs:
     #     python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
@@ -22,21 +22,21 @@ jobs:
       #   run: |
       #     python -m venv ./.venv
       #     . ./.venv/bin/activate
-      - name: runPython
-        run: |
+      # - name: runPython
+      #   run: |
           # . ./.venv/bin/activate
-          python ./a.py
-      - name: Commit files
-        run: |
-            git config --local user.email "github-actions[bot]@users.noreply.github.com"
-            git config --local user.name "github-actions[bot]"
-            git add .
-            git commit -m "docs: update blog"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          # python ./a.py
+      # - name: Commit files
+      #   run: |
+      #       git config --local user.email "github-actions[bot]@users.noreply.github.com"
+      #       git config --local user.name "github-actions[bot]"
+      #       git add .
+      #       git commit -m "docs: update blog"
+      # - name: Push changes
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     branch: ${{ github.ref }}
       # - name: Send email
       #   uses: dawidd6/action-send-mail@v3
       #   with:
